# bluflare

./: .dockerignore  Dockerfile  PLAN.md  README.md  TODAY.md  TODO  typos.toml
.github/workflows/: deploy_do.yml  react_check.yml  react_fmt.yml  react_i18n.yml  react_lint.yml  release.yml  rust_audit.yml  rust_check.yml  rust_clippy.yml  rust_fmt.yml  rust_test.yml  (+2 more)
backend/: .env  .gitignore  Cargo.toml  build.rs  config.toml
backend/.sqlx/: query-0286332e766a83d8fa8b94c183b76179c4f5219b349889fe137dc070e59f047d.json  query-04717ae866ccd589a0063ebcec2d10e810b626fb91c92d9f47a2e483d49ebbd4.json  query-0a25e3c8c06041dda862859581a50ac6979bf60f19c264a694732dfb978731d5.json  query-0e7a158fd6df9d91f40842b40a50a31774e54485b3527a7c912fc42474d655b2.json  query-11f39172dca7ef09ee6567a81c7e9936bf71b5fb79eaf5a4379cfad7cd563e53.json  query-1398720a2e5525a0d47ff5353fa332f09a20336038064fd6d2f7633d5028e8fc.json  query-17a1789dd70ff77450d995e3bab9eeac0fcca245497b0a314004e594b40435a6.json  query-20e1ce5adc1e5bcf73c64a2a1c3a4eb9b02f953c145d05ab2cd10873be34924b.json  query-24bbdab9f5431bb418b8639d7ef0ad4edd1fe73329ec2e9a55acb986d98be77a.json  query-32252af988ee4aa89945b11b591840a97711cf9f65129741ea78b338866b1cbb.json  query-32d61f54f3cb707d7d3f587adac4065d53f92b16b026f1538d8cda70023e07c3.json  query-5785a9f99d868ea4d0cc9ee9f584b8e42c3c5d727ef4b6392dc87e6e939fa8fc.json  query-5abab92fbe3cd7c2511aa98a2a3c148787581a6b4c5a5a15172875541c38109e.json  query-5b944c2127f73db5ecafb49036619e10ca94e76280f29f78fe50a5413d6177e8.json  query-68e183d223e9d07ea0b5d6f02e2b283e36971f426347c8321f6b079c2f90a8f2.json  query-74595348aacd33c6fb59c9da1d29a59d98077d6d49ca7da9ad23f0370f067bbf.json  query-7bc96faf5067ba33bb05eebce4d12f2a09d36e35242463b801b5d0b344180e68.json  query-84438dd8064c2bb0663dd3b18f88bf010c8d490a0e20182d8eb8bfcb55e8d8e3.json  query-89a86fc582f392140beb624701c43c12d29ea81cd8f41acb5683dd0ce1b942ac.json  query-8f7f1d580c5f03771f69c31f433899e37f430da4ae49dc86efce463af926a9b2.json  query-a388924df7be26c1bf0871d75543b8027b6ab5ea8e16744c0886013eacada56b.json  query-abca79c82f020b1e5378a90c528e0ede2066de0adf0b5537773a09c3f1103dbf.json  query-b188086c1ba7b9016a10367cb22f39993d4a583c1f0b8d50e6580eb0cf949ca1.json  query-b42df3ba7e25e739e985962f4289743aeece55f375abcddfe747a1225502b20d.json  query-c6f0753dab14dd73555cc1c42896c1abba85090e40ed916fca9fc72ce657b307.json  query-c9d77ad08a49910a77cba0d6358355d37a37945b5815f12ba74317f58ace330b.json  query-cafef85204f45a5805a14b54c8a1d6d055a90e9e66a2d5cfa6d7cda0c4d1245e.json  query-d680998995e82f028bd30ec13ca7b803cf93a9fd895ff18befef53bb630a23ef.json  query-f3f4affb41e2a3acafd191863ec554a252aae6d67edd5fc6a8304885476f9642.json  query-fb05653a1c77c10c6e7d65f5612068f7b70c757d525b93e263e349427d1d6435.json
backend/migrations/: 20250503155240_init.down.sql  20250503155240_init.up.sql
backend/src/: auth.rs  config.rs  error.rs  gen_auth.rs  jetstream.rs  layers.rs  main.rs  server.rs  slug.rs  state.rs
backend/src/db/: mod.rs
backend/src/gemini/: client.rs  mod.rs
backend/src/jetstream/: did.rs  message.rs  mod.rs  processor.rs  stream.rs
backend/src/models/: interest.rs  mod.rs  post.rs  topic.rs  user.rs
backend/src/routes/: auth.rs  interests.rs  mod.rs  posts.rs  suggest.rs  topics.rs  users.rs
deploy/: .env.example  Caddyfile  README.md  docker-compose.yml
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+67 files in other folders)
