[package]
edition = "2024"
name = "backend"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
hyper = { version = "1.0", features = ["full"] }
linkify = "0.10.0"
reqwest = { version = "0.12", features = ["json"] }
reqwest-websocket = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
